Fix network config on narrow window

--- a/renderer/styles/addWallet.module.css
+++ b/renderer/styles/addWallet.module.css
@@ -105,7 +105,7 @@
 }
 
 .config_left {
-    width: 200px;
+    width: 125px;
 }
 
 .config_left select {
@@ -120,7 +120,7 @@
     margin-left: 20px;
     flex: 1;
     display: grid;
-    grid-template-columns: 125px 1fr;
+    grid-template-columns: 100px 1fr;
     grid-row-gap: 15px;
 }
 
@@ -130,6 +130,7 @@
 
 .config_right input[type=text] {
     margin-left: 0;
+    min-width: 100px;
 }
 
 .config_right input[type=radio] {
